--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="adote_aqui.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
