Update: melhorando a organização e responsividade

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style-home.css">
+    <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="style/style-home.css">
     <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
     <title>ONG AdoteAqui!</title>
 </head>
@@ -17,13 +17,13 @@
 
         <div class="container">
 
-            <h1 class="menu1">AdoteAqui!</h1>
+            <h1 class="logo"><a href="index.html">AdoteAqui!</a></h1>
 
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="contato.html">Contato</a></li>
+                    <li><a href="pages/sobre.html">Sobre</a></li>
+                    <li><a href="pages/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -40,7 +40,7 @@
 
     <div>
 
-        <h4 class="click-adote"><a href="contato.html" class="adote">Adote ou Apadrinhe!</a></h4>
+        <h4 class="click-adote"><a href="pages/contato.html" class="adote">Adote ou Apadrinhe!</a></h4>
 
     </div>
 
@@ -64,84 +64,84 @@
             <img src="imagens/Cachorro1.jpg">
             <p class="nome-pets">Almirante</p>
             <p class="idade-pets">Tenho 2 anos</p>
-            <button class="botao-adote"><a href="contato.html">Adotar &#9825;</a></button>
+            <button class="botao-adote"><a href="pages/contato.html">Adotar &#9825;</a></button>
         </div>
 
         <div class="content-col">
             <img src="imagens/Cachorro2.jpg">
             <p class="nome-pets">Julia Roberts</p>
             <p class="idade-pets">Tenho 5 anos</p>
-            <button class="botao-adote"><a href="contato.html">Adotar &#9825;</a></button>
+            <button class="botao-adote"><a href="pages/contato.html">Adotar &#9825;</a></button>
         </div>
 
         <div class="content-col">
             <img src="imagens/Gato2.jpg">
             <p class="nome-pets">Jorge</p>
             <p class="idade-pets">Tenho 1 ano</p>
-            <button class="botao-adote"><a href="contato.html">Adotar &#9825;</a></button>
+            <button class="botao-adote"><a href="pages/contato.html">Adotar &#9825;</a></button>
         </div>
 
         <div class="content-col">
             <img src="imagens/Cachorro3.jpg">
             <p class="nome-pets">Godofreda</p>
             <p class="idade-pets">Tenho 8 anos</p>
-            <button class="botao-adote"><a href="contato.html">Adotar &#9825;</a></button>
+            <button class="botao-adote"><a href="pages/contato.html">Adotar &#9825;</a></button>
         </div>
 
         <div class="content-col">
             <img src="imagens/Cachorro4.jpg">
             <p class="nome-pets">Zoiudo</p>
             <p class="idade-pets">Tenho 5 anos</p>
-            <button class="botao-adote"><a href="contato.html">Adotar &#9825;</a></button>
+            <button class="botao-adote"><a href="pages/contato.html">Adotar &#9825;</a></button>
         </div>
 
         <div class="content-col">
             <img src="imagens/Cachorro5.jpg">
             <p class="nome-pets">Pé de Moleque</p>
             <p class="idade-pets">Tenho 4 anos</p>
-            <button class="botao-adote"><a href="contato.html">Adotar &#9825;</a></button>
+            <button class="botao-adote"><a href="pages/contato.html">Adotar &#9825;</a></button>
         </div>
 
         <div class="content-col">
             <img src="imagens/Cachorro6.jpg">
             <p class="nome-pets">Alfafa</p>
             <p class="idade-pets">Tenho 6 meses</p>
-            <button class="botao-adote"><a href="contato.html">Adotar &#9825;</a></button>
+            <button class="botao-adote"><a href="pages/contato.html">Adotar &#9825;</a></button>
         </div>
 
         <div class="content-col">
             <img src="imagens/Gato3.jpg">
             <p class="nome-pets">Pilantra</p>
             <p class="idade-pets">Tenho 8 meses</p>
-            <button class="botao-adote"><a href="contato.html">Adotar &#9825;</a></button>
+            <button class="botao-adote"><a href="pages/contato.html">Adotar &#9825;</a></button>
         </div>
 
         <div class="content-col">
             <img src="imagens/Cachorro8.jpg">
             <p class="nome-pets">Tim</p>
             <p class="idade-pets">Tenho 7 anos</p>
-            <button class="botao-adote"><a href="contato.html">Adotar &#9825;</a></button>
+            <button class="botao-adote"><a href="pages/contato.html">Adotar &#9825;</a></button>
         </div>
 
         <div class="content-col">
             <img src="imagens/Cachorro10.jpeg">
             <p class="nome-pets">Argos</p>
             <p class="idade-pets">Tenho 11 meses</p>
-            <button class="botao-adote"><a href="contato.html">Adotar &#9825;</a></button>
+            <button class="botao-adote"><a href="pages/contato.html">Adotar &#9825;</a></button>
         </div>
 
         <div class="content-col">
             <img src="imagens/Gato1.jpeg">
             <p class="nome-pets">Link</p>
             <p class="idade-pets">Tenho 7 anos</p>
-            <button class="botao-adote"><a href="contato.html">Adotar &#9825;</a></button>
+            <button class="botao-adote"><a href="pages/contato.html">Adotar &#9825;</a></button>
         </div>
 
         <div class="content-col">
             <img src="imagens/Cachorro9.jpeg">
             <p class="nome-pets">Hector Bonilha</p>
             <p class="idade-pets">Tenho 3 anos</p>
-            <button class="botao-adote"><a href="contato.html">Adotar &#9825;</a></button>
+            <button class="botao-adote"><a href="pages/contato.html">Adotar &#9825;</a></button>
 
         </div>
 
@@ -150,21 +150,22 @@
 
     <footer>
         <div>
-            <a class="footer-icon" href="https://twitter.com"><img src="imagens/twitter.svg" width="30" height="30">
+            <a class="footer-icon" href="https://twitter.com" target="_blank"><img src="./imagens/twitter.svg" width="30" height="30">
             </a>
-            <a class="footer-icon" href="https://facebook.com"><img src="imagens/facebook.svg" width="30"
+            <a class="footer-icon" href="https://facebook.com" target="_blank"><img src="./imagens/facebook.svg" width="30"
                     height="30"></a>
-            <a class="footer-icon" href="https://youtube.com"><img src="imagens/youtube.svg" width="30" height="30"></a>
-            <a class="footer-icon" href="https://instagram.com"><img src="imagens/instagram.svg" width="30"
+            <a class="footer-icon" href="https://youtube.com" target="_blank"><img src="./imagens/youtube.svg" width="30" height="30"></a>
+            <a class="footer-icon" href="https://instagram.com" target="_blank"><img src="./imagens/instagram.svg" width="30"
                     height="30"></a>
         </div>
         <div class="footer-texto">
             <p>AdoteAqui!</p>
-            <p>Em parceria com a <span class="resilia">Resilia Educação</span></p>
+            <p>Em parceria com a <a class="resilia" href="https://www.resilia.com.br/" target="_blank">Resilia Educação</a></p>
             <p>&copy;Todos os direitos reservados</p>
+            <p>Desenvolvido por <a class="social" href="https://www.linkedin.com/in/natashamiele/" target="_blank">Natasha Miele</a></p>
+            
         </div>
     </footer>
-
 
 </body>
 
