--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style-home.css">
+    <link rel="stylesheet" href="../style/reset.css">
+    <link rel="stylesheet" href="../style/style-sobre.css">
+    <!--<link rel="stylesheet" href="../style/style-home.css">  -->
     <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
     <title>Sobre o AdoteAqui!</title>
 </head>
@@ -17,20 +18,20 @@
 
         <div class="container">
 
-            <h1 class="menu1">AdoteAqui!</h1>
-            <!--<a href="#">Pets Resilia</a> ><!-->
+            <h1 class="logo"><a href="../index.html">AdoteAqui!</a></h1>
 
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="contato.html">Contato</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="./sobre.html">Sobre</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main>
+
 
         <div class="texto-sobre">
             <h1>A AdoteAqui! é uma ONG em parceria com a <a href="https://www.resilia.com.br/" class="resilia">Resilia Educação</a>.
@@ -47,7 +48,7 @@
                 tempo em prol da causa animal. Nossa missão é fazer com que cada bichinho em situação de risco possa ter
                 um lar com muito amor.</h1>
             <br><br>
-            <h1>Quer saber mais sobre o projeto? <a href="contato.html">Fale com a gente</a> &#9825; </h1>
+            <h1>Quer saber mais sobre o projeto? <a class="fale-com-a-gente" href="contato.html">Fale com a gente</a> &#9825; </h1>
 
         </div>
     </main>
@@ -55,18 +56,20 @@
 
     <footer>
         <div>
-            <a class="footer-icon" href="https://twitter.com"><img src="imagens/twitter.svg" width="30" height="30">
+            <a class="footer-icon" href="https://twitter.com" target="_blank"><img src="../imagens/twitter.svg" width="30" height="30">
             </a>
-            <a class="footer-icon" href="https://facebook.com"><img src="imagens/facebook.svg" width="30"
+            <a class="footer-icon" href="https://facebook.com" target="_blank"><img src="../imagens/facebook.svg" width="30"
                     height="30"></a>
-            <a class="footer-icon" href="https://youtube.com"><img src="imagens/youtube.svg" width="30" height="30"></a>
-            <a class="footer-icon" href="https://instagram.com"><img src="imagens/instagram.svg" width="30"
+            <a class="footer-icon" href="https://youtube.com" target="_blank"><img src="../imagens/youtube.svg" width="30" height="30"></a>
+            <a class="footer-icon" href="https://instagram.com" target="_blank"><img src="../imagens/instagram.svg" width="30"
                     height="30"></a>
         </div>
         <div class="footer-texto">
             <p>AdoteAqui!</p>
-            <p>Em parceria com a <span class="resilia">Resilia Educação</span></p>
+            <p>Em parceria com a <a class="resilia" href="https://www.resilia.com.br/" target="_blank">Resilia Educação</a></p>
             <p>&copy;Todos os direitos reservados</p>
+            <p>Desenvolvido por <a class="social" href="https://www.linkedin.com/in/natashamiele/" target="_blank">Natasha Miele</a></p>
+            
         </div>
     </footer>
 
